# cpython

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  cpython.BUILD.bazel  libffi.BUILD.bazel
.github/workflows/: ci.yml
docs/: configure-check-audit.md
python/: extensions.bzl
python/patches/3.11/: BUILD.bazel  clang-cl.patch  libmpdec-clang-cl.patch  multiprocessing-semaphore-value-type.patch  pyconfig-clang-cl.patch  test-ssl-tls-rejection-oserror.patch  test-ssl-wrong-cert-oserror.patch  timeval-clang-cl.patch  tracemalloc-clang-cl-pack.patch  winapi-previous-token-size.patch  wincrypt-header.patch
python/patches/3.12/: BUILD.bazel  atomic-clang-cl-casts.patch  getpath-generated-header.patch  multiprocessing-rlock-repr-race.patch  multiprocessing-semaphore-value-type.patch  test-ssl-tls-rejection-oserror.patch  test-ssl-wrong-cert-oserror.patch  winapi-previous-token-size.patch
python/patches/3.13/: BUILD.bazel  multiprocessing-semaphore-value-type.patch  stopwatch-perf-counter.patch  winapi-previous-token-size.patch
python/patches/bzip2/: export-license.patch
python/patches/common/: BUILD.bazel  cgi-nonfork-content-length-test.patch  static-windows-winver.patch  tarfile-mode-capabilities.patch  test-dtrace-windows.patch  venv-writable-windows-launchers.patch  venv-writable-windows-scripts.patch
python/patches/libffi/: BUILD.bazel  clang-cl-aarch64-hfa.patch  windows-arm64-seh.patch
python/patches/llvm/: BUILD.bazel
python/patches/openssl/: BUILD.bazel  export-license.patch  windows-defines.patch
python/patches/rules_cc_autoconf/: BUILD.bazel  expose-autoconf-header-manifest.patch
python/patches/windows_support/: BUILD.bazel  expose-vcruntime-dlls.patch
python/patches/xz/: BUILD.bazel  export-license.patch
python/private/: BUILD.bazel  build_details.bzl  build_metadata.bzl  bundled_libraries.bzl  concat_files.c  deepfreeze.bzl  deepfreeze.sh  generate_build_details.sh  generate_sysconfig_json.py  install_only.bzl  install_only_mtree.awk  install_only_mtree.c  install_only_test.py  install_only_test.sh  install_tree.bzl  install_tree_test.sh  modules.bzl  platforms.bzl  pyconfig.bzl  pyconfig_contract.c  repositories.bzl  run_target_python.sh  shared_extensions.bzl  test_programs.bzl  upstream_test.sh  upstream_tests.bzl  versions.bzl  windows_bootstrap_support.c  windows_resource.bzl  windows_static_support.c
python/private/libffi/: BUILD.bazel  call_test.c  closure_test.c  complex_test.c  config.bzl  fficonfig.h  seh_test.c
python/private/sysconfig/: BUILD.bazel  sysconfig.bzl  sysconfig_generator.c
tests/duplicate_version_requests/: MODULE.bazel
tests/duplicate_version_requests/requester/: BUILD.bazel  MODULE.bazel
tests/integration/: BUILD.bazel  MODULE.bazel  python_smoke_test.sh
tools/: configure_check_audit.sh  configure_check_dispositions.json  configure_checklist.py
