module(
    name = "cpython",
    version = "0.0.0",
    bazel_compatibility = [">=9.1.1"],
)

bazel_dep(name = "bazel_lib", version = "3.2.2")
bazel_dep(name = "bzip2", version = "1.0.8.bcr.4")
bazel_dep(name = "llvm", version = "0.8.8")
bazel_dep(name = "openssl", version = "3.5.5.bcr.4")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.19")
bazel_dep(name = "rules_cc_autoconf", version = "0.12.1")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "sqlite3", version = "3.53.2")

# windows_support supplies the MSVC runtime and Windows SDK used by the
# clang-cl toolchain targets in the pinned LLVM revision below.
bazel_dep(name = "windows_support", version = "0.2.0")
bazel_dep(name = "xz", version = "5.4.5.bcr.8")
bazel_dep(name = "zlib", version = "1.3.2")

single_version_override(
    module_name = "openssl",
    patch_strip = 1,
    patches = ["//python/patches/openssl:windows-defines.patch"],
    version = "3.5.5.bcr.4",
)

single_version_override(
    module_name = "rules_cc_autoconf",
    patch_strip = 1,
    patches = [
        "//python/patches/rules_cc_autoconf:windows-clang-cl-command-line.patch",
        "//python/patches/rules_cc_autoconf:windows-clang-cl-exceptions.patch",
        "//python/patches/rules_cc_autoconf:windows-msvc-driver-link-flags.patch",
    ],
    version = "0.12.1",
)

archive_override(
    module_name = "llvm",
    integrity = "sha256-sSr0NUsY06DQwPoxgh+drMpOkeG/N7Lx+KxWkZTFUDM=",
    patch_strip = 1,
    patches = ["//python/patches/llvm:msvc-warning-level.patch"],
    strip_prefix = "hermetic-llvm-85d29dc776702879eb9cbcbe560428df7fd24e64",
    urls = ["https://github.com/hermeticbuild/hermetic-llvm/archive/85d29dc776702879eb9cbcbe560428df7fd24e64.tar.gz"],
)

archive_override(
    module_name = "rules_cc",
    integrity = "sha256-yLVbuU8I/7wTSmCifWYUqY45Q5aMRqWZkkkX6uXaFio=",
    strip_prefix = "rules_cc-cb995b18db7c855fe95cacf0a0e84fda8c58725d",
    urls = ["https://github.com/ArchangelX360/rules_cc/archive/cb995b18db7c855fe95cacf0a0e84fda8c58725d.tar.gz"],
)

python = use_extension("//python:extensions.bzl", "python", dev_dependency = True)
python.version(version = "3.11")
python.version(version = "3.12")
python.version(version = "3.13")
python.version(version = "3.14")
use_repo(
    python,
    "python3_11",
    "python3_12",
    "python3_13",
    "python3_14",
)
