load("@bazel_lib//lib:copy_file.bzl", "copy_file")
load("@bazel_lib//lib:copy_to_directory.bzl", "copy_to_directory")
load("@bazel_lib//lib:run_binary.bzl", "run_binary")
load("@cpython//python/private:build_metadata.bzl", "cpython_build_metadata")
load("@cpython//python/private:bundled_libraries.bzl", "bundled_libraries")
load("@cpython//python/private:deepfreeze.bzl", "deepfreeze_sources")
load("@cpython//python/private:modules.bzl", "declare_cpython_static_modules")
load("@cpython//python/private:pyconfig.bzl", "pyconfig")
load("@cpython//python/private:shared_extensions.bzl", "shared_extensions")
load("@cpython//python/private:test_programs.bzl", "native_test_programs")
load("@cpython//python/private:upstream_tests.bzl", "upstream_regrtests")
load("@cpython//python/private/sysconfig:sysconfig.bzl", "cpython_sysconfig", "merge_sysconfig_build_vars")
load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_import.bzl", "cc_import")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_shared_library.bzl", "cc_shared_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")
load("//bazel:release.bzl", "PYTHON_NEEDS_DEEPFREEZE", "PYTHON_SOABI", "PYTHON_VERSION")

package(
    default_visibility = ["//visibility:public"],
    features = ["dynamic_link_msvcrt"],
)

config_setting(
    name = "darwin_arm64",
    constraint_values = [
        "@platforms//cpu:aarch64",
        "@platforms//os:macos",
    ],
)

config_setting(
    name = "linux_arm64",
    constraint_values = [
        "@platforms//cpu:aarch64",
        "@platforms//os:linux",
    ],
)

config_setting(
    name = "darwin_x86_64",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:macos",
    ],
)

config_setting(
    name = "linux_x86_64",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
)

config_setting(
    name = "windows_arm64",
    constraint_values = [
        "@platforms//cpu:aarch64",
        "@platforms//os:windows",
    ],
)

config_setting(
    name = "windows_x86_64",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:windows",
    ],
)

C_STANDARD_COPTS = select({
    ":windows_arm64": ["/std:c11"],
    ":windows_x86_64": ["/std:c11"],
    "//conditions:default": ["-std=c11"],
})

OPTIMIZATION_COPTS = select({
    ":windows_arm64": ["/O2"],
    ":windows_x86_64": ["/O2"],
    "//conditions:default": ["-O3"],
})

WINDOWS_LINK_LIBRARIES = [
    "advapi32.lib",
    "bcrypt.lib",
    "crypt32.lib",
    "iphlpapi.lib",
    "ole32.lib",
    "oleaut32.lib",
    "pathcch.lib",
    "user32.lib",
    "version.lib",
    "winmm.lib",
    "ws2_32.lib",
] + (["Rpcrt4.lib"] if PYTHON_VERSION != "3.11" else [])

WINDOWS_BOOTSTRAP_DEFINES = [
    "MS_NO_COREDLL=1",
    "Py_NO_ENABLE_SHARED=1",
]

PYTHON_DLL_BASENAME = "python{}".format(PYTHON_VERSION.replace(".", ""))
PYTHON_DLL = PYTHON_DLL_BASENAME + ".dll"
PYTHON_IMPORT_LIBRARY = PYTHON_DLL_BASENAME + ".lib"

PLATFORM_LINKOPTS = select({
    ":darwin_arm64": [
        "-framework",
        "CoreFoundation",
        "-lm",
    ],
    ":linux_arm64": [
        "-ldl",
        "-lm",
        "-lpthread",
        "-lrt",
        "-lutil",
        "-Wl,--export-dynamic",
    ],
    ":darwin_x86_64": [
        "-framework",
        "CoreFoundation",
        "-lm",
    ],
    ":linux_x86_64": [
        "-ldl",
        "-lm",
        "-lpthread",
        "-lrt",
        "-lutil",
        "-Wl,--export-dynamic",
    ],
    ":windows_arm64": WINDOWS_LINK_LIBRARIES,
    ":windows_x86_64": WINDOWS_LINK_LIBRARIES,
})

PYTHON_LINKOPTS = PLATFORM_LINKOPTS + select({
    ":darwin_arm64": [
        "-Wl,-export_dynamic",
        "-Wl,-stack_size,1000000",
    ],
    ":darwin_x86_64": [
        "-Wl,-export_dynamic",
        "-Wl,-stack_size,1000000",
    ],
    ":linux_arm64": [],
    ":linux_x86_64": [],
    ":windows_arm64": ["/STACK:2000000"],
    ":windows_x86_64": ["/STACK:2000000"],
})

pyconfig(
    name = "pyconfig_h",
    version = PYTHON_VERSION,
)

copy_file(
    name = "sqlite3_header",
    src = "@sqlite3//:sqlite3.h",
    out = "sqlite3.h",
)

cc_library(
    name = "hermetic_sqlite3",
    srcs = ["@sqlite3//:sqlite3.c"],
    hdrs = [":sqlite3_header"],
    defines = ["SQLITE_ENABLE_FTS4=1"],
)

SYSCONFIG_PREFIX = "/python"

# Keep this equal to the pinned LLVM toolchain's -mmacosx-version-min value.
MACOSX_DEPLOYMENT_TARGET = "14.0"
SYSCONFIG_LIBDEST = "{}/lib/python{}".format(SYSCONFIG_PREFIX, PYTHON_VERSION)
SYSCONFIG_INCLUDEPY = "{}/include/python{}".format(SYSCONFIG_PREFIX, PYTHON_VERSION)
SYSCONFIG_COMMON_BUILD_VARS = {
    "ABIFLAGS": "",
    "AR": "llvm-ar",
    "ARFLAGS": "rcs",
    "BINDIR": "{}/bin".format(SYSCONFIG_PREFIX),
    "BINLIBDEST": SYSCONFIG_LIBDEST,
    "CC": "clang",
    "CCSHARED": "-fPIC",
    "CFLAGS": "-std=c11 -fwrapv -O3 -DNDEBUG",
    "CFLAGSFORSHARED": "-fPIC",
    "CFLAGS_NODIST": "",
    "CONFIG_ARGS": "",
    "CONFINCLUDEDIR": SYSCONFIG_INCLUDEPY,
    "CONFINCLUDEPY": SYSCONFIG_INCLUDEPY,
    "DESTLIB": SYSCONFIG_LIBDEST,
    "DESTSHARED": "{}/lib-dynload".format(SYSCONFIG_LIBDEST),
    "EXE": "",
    "INCLUDEDIR": "{}/include".format(SYSCONFIG_PREFIX),
    "INCLUDEPY": SYSCONFIG_INCLUDEPY,
    "LDFLAGS": "",
    "LDLIBRARY": "libpython{}.a".format(PYTHON_VERSION),
    "LDSHARED": "clang -shared",
    "LIBDEST": SYSCONFIG_LIBDEST,
    "LIBDIR": "{}/lib".format(SYSCONFIG_PREFIX),
    "LIBRARY": "libpython{}.a".format(PYTHON_VERSION),
    "OBJEXT": ".o",
    "PLATLIBDIR": "lib",
    "PY_CFLAGS": "-std=c11 -fwrapv -O3 -DNDEBUG",
    "PY_CFLAGS_NODIST": "",
    "PY_LDFLAGS": "",
    "SHLIB_SUFFIX": ".so",
    "VERSION": PYTHON_VERSION,
    "VPATH": ".",
    "exec_prefix": SYSCONFIG_PREFIX,
    "prefix": SYSCONFIG_PREFIX,
    "srcdir": ".",
}

cpython_sysconfig(
    name = "generated_sysconfig",
    build_vars = select({
        ":darwin_arm64": merge_sysconfig_build_vars(SYSCONFIG_COMMON_BUILD_VARS, {
            "BLDSHARED": "clang -shared",
            "EXT_SUFFIX": ".{}-darwin.so".format(PYTHON_SOABI),
            "LIBM": "-lm",
            "LIBPL": "{}/config-{}-darwin".format(SYSCONFIG_LIBDEST, PYTHON_VERSION),
            "LIBS": "-lm",
            "LINKFORSHARED": "-Wl,-stack_size,1000000 -framework CoreFoundation",
            "MACOSX_DEPLOYMENT_TARGET": MACOSX_DEPLOYMENT_TARGET,
            "MACHDEP": "darwin",
            "MULTIARCH": "darwin",
            "MULTIARCH_CPPFLAGS": "-DMULTIARCH=\\\"darwin\\\"",
            "SOABI": "{}-darwin".format(PYTHON_SOABI),
        }),
        ":darwin_x86_64": merge_sysconfig_build_vars(SYSCONFIG_COMMON_BUILD_VARS, {
            "BLDSHARED": "clang -shared",
            "EXT_SUFFIX": ".{}-darwin.so".format(PYTHON_SOABI),
            "LIBM": "-lm",
            "LIBPL": "{}/config-{}-darwin".format(SYSCONFIG_LIBDEST, PYTHON_VERSION),
            "LIBS": "-lm",
            "LINKFORSHARED": "-Wl,-stack_size,1000000 -framework CoreFoundation",
            "MACOSX_DEPLOYMENT_TARGET": MACOSX_DEPLOYMENT_TARGET,
            "MACHDEP": "darwin",
            "MULTIARCH": "darwin",
            "MULTIARCH_CPPFLAGS": "-DMULTIARCH=\\\"darwin\\\"",
            "SOABI": "{}-darwin".format(PYTHON_SOABI),
        }),
        ":linux_arm64": merge_sysconfig_build_vars(SYSCONFIG_COMMON_BUILD_VARS, {
            "BLDSHARED": "clang -shared",
            "EXT_SUFFIX": ".{}-aarch64-linux-gnu.so".format(PYTHON_SOABI),
            "LIBM": "-lm",
            "LIBPL": "{}/config-{}-aarch64-linux-gnu".format(SYSCONFIG_LIBDEST, PYTHON_VERSION),
            "LIBS": "-ldl -lm -lpthread -lrt -lutil",
            "LINKFORSHARED": "-Wl,--export-dynamic",
            "MACHDEP": "linux",
            "MULTIARCH": "aarch64-linux-gnu",
            "MULTIARCH_CPPFLAGS": "-DMULTIARCH=\\\"aarch64-linux-gnu\\\"",
            "SOABI": "{}-aarch64-linux-gnu".format(PYTHON_SOABI),
        }),
        ":linux_x86_64": merge_sysconfig_build_vars(SYSCONFIG_COMMON_BUILD_VARS, {
            "BLDSHARED": "clang -shared",
            "EXT_SUFFIX": ".{}-x86_64-linux-gnu.so".format(PYTHON_SOABI),
            "LIBM": "-lm",
            "LIBPL": "{}/config-{}-x86_64-linux-gnu".format(SYSCONFIG_LIBDEST, PYTHON_VERSION),
            "LIBS": "-ldl -lm -lpthread -lrt -lutil",
            "LINKFORSHARED": "-Wl,--export-dynamic",
            "MACHDEP": "linux",
            "MULTIARCH": "x86_64-linux-gnu",
            "MULTIARCH_CPPFLAGS": "-DMULTIARCH=\\\"x86_64-linux-gnu\\\"",
            "SOABI": "{}-x86_64-linux-gnu".format(PYTHON_SOABI),
        }),
        ":windows_arm64": merge_sysconfig_build_vars(SYSCONFIG_COMMON_BUILD_VARS, {
            "AR": "llvm-lib",
            "BLDSHARED": "lld-link /DLL",
            "CC": "clang-cl",
            "CCSHARED": "",
            "CFLAGS": "/std:c11 /O2 /DNDEBUG",
            "CFLAGSFORSHARED": "",
            "EXE": ".exe",
            "EXT_SUFFIX": ".pyd",
            "LDSHARED": "lld-link /DLL",
            "LIBM": "",
            "LDLIBRARY": PYTHON_DLL,
            "LIBDIR": "{}/libs".format(SYSCONFIG_PREFIX),
            "LIBRARY": PYTHON_IMPORT_LIBRARY,
            "LIBPL": "{}/config-{}-arm64-windows".format(SYSCONFIG_LIBDEST, PYTHON_VERSION),
            "LIBS": " ".join(WINDOWS_LINK_LIBRARIES),
            "MACHDEP": "win32",
            "MULTIARCH": "win-arm64",
            "MULTIARCH_CPPFLAGS": "",
            "OBJEXT": ".obj",
            "PY_CFLAGS": "/std:c11 /O2 /DNDEBUG",
            "Py_ENABLE_SHARED": "1",
            "SHLIB_SUFFIX": ".pyd",
            "SOABI": "",
        }),
        ":windows_x86_64": merge_sysconfig_build_vars(SYSCONFIG_COMMON_BUILD_VARS, {
            "AR": "llvm-lib",
            "BLDSHARED": "lld-link /DLL",
            "CC": "clang-cl",
            "CCSHARED": "",
            "CFLAGS": "/std:c11 /O2 /DNDEBUG",
            "CFLAGSFORSHARED": "",
            "EXE": ".exe",
            "EXT_SUFFIX": ".pyd",
            "LDSHARED": "lld-link /DLL",
            "LIBM": "",
            "LDLIBRARY": PYTHON_DLL,
            "LIBDIR": "{}/libs".format(SYSCONFIG_PREFIX),
            "LIBRARY": PYTHON_IMPORT_LIBRARY,
            "LIBPL": "{}/config-{}-amd64-windows".format(SYSCONFIG_LIBDEST, PYTHON_VERSION),
            "LIBS": " ".join(WINDOWS_LINK_LIBRARIES),
            "MACHDEP": "win32",
            "MULTIARCH": "win-amd64",
            "MULTIARCH_CPPFLAGS": "",
            "OBJEXT": ".obj",
            "PY_CFLAGS": "/std:c11 /O2 /DNDEBUG",
            "Py_ENABLE_SHARED": "1",
            "SHLIB_SUFFIX": ".pyd",
            "SOABI": "",
        }),
    }),
    integer_build_vars = select({
        ":windows_arm64": ["Py_ENABLE_SHARED"],
        ":windows_x86_64": ["Py_ENABLE_SHARED"],
        "//conditions:default": [],
    }),
    makefile_template = "Makefile.pre.in",
    multiarch = select({
        ":darwin_arm64": "darwin",
        ":darwin_x86_64": "darwin",
        ":linux_arm64": "aarch64-linux-gnu",
        ":linux_x86_64": "x86_64-linux-gnu",
        ":windows_arm64": "win-arm64",
        ":windows_x86_64": "win-amd64",
    }),
    platform = select({
        ":darwin_arm64": "darwin",
        ":darwin_x86_64": "darwin",
        ":linux_arm64": "linux",
        ":linux_x86_64": "linux",
        ":windows_arm64": "windows",
        ":windows_x86_64": "windows",
    }),
    pyconfig = ":pyconfig_h",
)

filegroup(
    name = "sysconfig_data",
    srcs = [":generated_sysconfig"],
    output_group = "sysconfig_data",
)

filegroup(
    name = "sysconfig_makefile",
    srcs = [":generated_sysconfig"],
    output_group = "makefile",
)

cc_library(
    name = "headers",
    hdrs = glob([
        "Include/**/*.h",
        "Modules/**/*.h",
        "Objects/**/*.h",
        "Parser/**/*.h",
        "PC/**/*.h",
        "Python/**/*.h",
    ]) + [":pyconfig_h"],
    includes = [
        ".",
        "Include",
        "Include/internal",
        "Modules",
    ] + (["Include/internal/mimalloc"] if PYTHON_VERSION in ["3.13", "3.14"] else []) + select({
        ":windows_arm64": ["PC"],
        ":windows_x86_64": ["PC"],
        "//conditions:default": [],
    }),
    textual_hdrs = glob(
        [
            "Modules/**/*.inc",
            "Modules/_sha3/*.c",
            "Modules/_ssl/*.c",
            "Objects/*.inc",
            "Objects/mimalloc/**/*.c",
        ],
        allow_empty = True,
    ),
)

cc_library(
    name = "bootstrap_headers",
    hdrs = glob([
        "Include/**/*.h",
        "Modules/**/*.h",
        "Objects/**/*.h",
        "Parser/**/*.h",
        "PC/**/*.h",
        "Python/**/*.h",
    ]) + [":pyconfig_h"],
    includes = [
        ".",
        "Include",
        "Include/internal",
        "Modules",
    ] + (["Include/internal/mimalloc"] if PYTHON_VERSION in ["3.13", "3.14"] else []) + select({
        ":windows_arm64": ["PC"],
        ":windows_x86_64": ["PC"],
        "//conditions:default": [],
    }),
    defines = select({
        ":windows_arm64": WINDOWS_BOOTSTRAP_DEFINES,
        ":windows_x86_64": WINDOWS_BOOTSTRAP_DEFINES,
        "//conditions:default": [],
    }),
    textual_hdrs = glob(
        [
            "Modules/**/*.inc",
            "Modules/_sha3/*.c",
            "Modules/_ssl/*.c",
            "Objects/*.inc",
            "Objects/mimalloc/**/*.c",
        ],
        allow_empty = True,
    ),
)

bundled_libraries(
    version = PYTHON_VERSION,
)

cc_library(
    name = "pyconfig_contract",
    srcs = ["@cpython//python/private:pyconfig_contract.c"],
    copts = C_STANDARD_COPTS + select({
        ":windows_arm64": ["-DPy_BUILD_CORE=1"],
        ":windows_x86_64": ["-DPy_BUILD_CORE=1"],
        "//conditions:default": [],
    }),
    deps = [":headers"],
)

cc_library(
    name = "bootstrap_pyconfig_contract",
    srcs = ["@cpython//python/private:pyconfig_contract.c"],
    copts = C_STANDARD_COPTS + [
        "-DCPYTHON_BAZEL_STATIC_BOOTSTRAP=1",
        "-DPy_BUILD_CORE=1",
    ],
    deps = [":bootstrap_headers"],
)

CORE_BASE_SOURCES = glob([
    "Objects/*.c",
    "Parser/**/*.c",
    "Python/*.c",
], exclude = [
    "Python/bytecodes.c",
    "Python/ceval.c",
    "Python/_contextvars.c",
    "Python/dup2.c",
    "Python/dynload_hpux.c",
    "Python/dynload_shlib.c",
    "Python/dynload_stub.c",
    "Python/dynload_win.c",
    "Python/emscripten_signal.c",
    "Python/emscripten_syscalls.c",
    "Python/emscripten_trampoline.c",
    "Python/emscripten_trampoline_inner.c",
    "Python/frozen.c",
    "Python/frozenmain.c",
    "Python/optimizer_bytecodes.c",
]) + [
    "Modules/gcmodule.c",
    "Modules/getbuildinfo.c",
    "Modules/main.c",
]

CORE_SOURCES = CORE_BASE_SOURCES + select({
    ":darwin_arm64": [
        "Python/dynload_shlib.c",
        "Python/frozenmain.c",
    ],
    ":darwin_x86_64": [
        "Python/dynload_shlib.c",
        "Python/frozenmain.c",
    ],
    ":linux_arm64": [
        "Python/dynload_shlib.c",
        "Python/frozenmain.c",
    ],
    ":linux_x86_64": [
        "Python/dynload_shlib.c",
        "Python/frozenmain.c",
    ],
    ":windows_arm64": [
        "PC/invalid_parameter_handler.c",
        "PC/dl_nt.c",
        "Python/dynload_win.c",
    ],
    ":windows_x86_64": [
        "PC/invalid_parameter_handler.c",
        "PC/dl_nt.c",
        "Python/dynload_win.c",
    ],
})

BOOTSTRAP_CORE_SOURCES = CORE_BASE_SOURCES + select({
    ":darwin_arm64": [
        "Python/dynload_shlib.c",
        "Python/frozenmain.c",
    ],
    ":darwin_x86_64": [
        "Python/dynload_shlib.c",
        "Python/frozenmain.c",
    ],
    ":linux_arm64": [
        "Python/dynload_shlib.c",
        "Python/frozenmain.c",
    ],
    ":linux_x86_64": [
        "Python/dynload_shlib.c",
        "Python/frozenmain.c",
    ],
    ":windows_arm64": [
        "PC/invalid_parameter_handler.c",
        "Python/dynload_win.c",
        "@cpython//python/private:windows_bootstrap_support.c",
    ],
    ":windows_x86_64": [
        "PC/invalid_parameter_handler.c",
        "Python/dynload_win.c",
        "@cpython//python/private:windows_bootstrap_support.c",
    ],
})

COMMON_COPTS = C_STANDARD_COPTS + OPTIMIZATION_COPTS + [
    "-fwrapv",
    "-DNDEBUG",
] + select({
    ":darwin_arm64": [
        "-DABIFLAGS=\\\"\\\"",
        "-DMULTIARCH=\\\"darwin\\\"",
        "-DPLATFORM=\\\"darwin\\\"",
        "-DPLATLIBDIR=\\\"lib\\\"",
        "-DSOABI=\\\"%s-darwin\\\"" % PYTHON_SOABI,
    ],
    ":darwin_x86_64": [
        "-DABIFLAGS=\\\"\\\"",
        "-DMULTIARCH=\\\"darwin\\\"",
        "-DPLATFORM=\\\"darwin\\\"",
        "-DPLATLIBDIR=\\\"lib\\\"",
        "-DSOABI=\\\"%s-darwin\\\"" % PYTHON_SOABI,
    ],
    ":linux_arm64": [
        "-DABIFLAGS=\\\"\\\"",
        "-DMULTIARCH=\\\"aarch64-linux-gnu\\\"",
        "-DPLATFORM=\\\"linux\\\"",
        "-DPLATLIBDIR=\\\"lib\\\"",
        "-DSOABI=\\\"%s-aarch64-linux-gnu\\\"" % PYTHON_SOABI,
    ],
    ":linux_x86_64": [
        "-DABIFLAGS=\\\"\\\"",
        "-DMULTIARCH=\\\"x86_64-linux-gnu\\\"",
        "-DPLATFORM=\\\"linux\\\"",
        "-DPLATLIBDIR=\\\"lib\\\"",
        "-DSOABI=\\\"%s-x86_64-linux-gnu\\\"" % PYTHON_SOABI,
    ],
    ":windows_arm64": [
        "-DPY3_DLLNAME=L\\\"python3\\\"",
    ],
    ":windows_x86_64": [
        "-DPY3_DLLNAME=L\\\"python3\\\"",
    ],
})

WINDOWS_REMOTE_DEBUG_COPTS = ["-DPy_REMOTE_DEBUG=1"] if PYTHON_VERSION == "3.14" else []

CORE_COPTS = ["-DPy_BUILD_CORE=1"] + COMMON_COPTS + select({
    ":windows_arm64": [
        "-DMS_DLL_ID=\\\"%s-arm64\\\"" % PYTHON_VERSION,
    ] + WINDOWS_REMOTE_DEBUG_COPTS + [
        "-DVPATH=\\\".\\\"",
    ],
    ":windows_x86_64": [
        "-DMS_DLL_ID=\\\"%s\\\"" % PYTHON_VERSION,
    ] + WINDOWS_REMOTE_DEBUG_COPTS + [
        "-DVPATH=\\\".\\\"",
    ],
    "//conditions:default": [],
})

CEVAL_COPTS = ["-finline-max-stacksize=512"] if PYTHON_VERSION == "3.14" else []

RUNTIME_MODULE_COPTS = COMMON_COPTS + select({
    ":windows_arm64": ["-DPy_BUILD_CORE=1"],
    ":windows_x86_64": ["-DPy_BUILD_CORE=1"],
    "//conditions:default": [],
})

BOOTSTRAP_MODULES = declare_cpython_static_modules(
    name = "python_bootstrap_modules",
    version = PYTHON_VERSION,
    categories = ["bootstrap"],
    copts = RUNTIME_MODULE_COPTS,
    deps = [":headers"],
)

STATIC_BOOTSTRAP_MODULES = declare_cpython_static_modules(
    name = "python_static_bootstrap_modules",
    version = PYTHON_VERSION,
    categories = ["bootstrap"],
    copts = COMMON_COPTS,
    deps = [":bootstrap_headers"],
)

SHARED_MODULE_NAMES = ["_testcapi"] + (
    ["_asyncio"] if PYTHON_VERSION == "3.14" else []
)

STATIC_MODULES = declare_cpython_static_modules(
    name = "python_static_modules",
    version = PYTHON_VERSION,
    copts = RUNTIME_MODULE_COPTS,
    deps = [":headers"],
    exclude_modules = SHARED_MODULE_NAMES,
    module_libraries = BOOTSTRAP_MODULES.module_libraries,
)

cc_library(
    name = "python_ceval",
    srcs = ["Python/ceval.c"],
    copts = CORE_COPTS + select({
        ":darwin_arm64": CEVAL_COPTS,
        ":darwin_x86_64": CEVAL_COPTS,
        ":linux_arm64": CEVAL_COPTS,
        ":linux_x86_64": CEVAL_COPTS,
        ":windows_arm64": [],
        ":windows_x86_64": [],
    }),
    deps = [
        ":headers",
        ":pyconfig_contract",
    ],
    alwayslink = True,
)

cc_library(
    name = "python_core_no_frozen",
    srcs = CORE_SOURCES,
    copts = CORE_COPTS,
    deps = [
        ":headers",
        ":python_ceval",
        ":pyconfig_contract",
    ],
    alwayslink = True,
)

cc_library(
    name = "python_bootstrap_ceval",
    srcs = ["Python/ceval.c"],
    copts = CORE_COPTS,
    deps = [
        ":bootstrap_headers",
        ":bootstrap_pyconfig_contract",
    ],
    alwayslink = True,
)

cc_library(
    name = "python_bootstrap_core_no_frozen",
    srcs = BOOTSTRAP_CORE_SOURCES,
    copts = CORE_COPTS,
    deps = [
        ":bootstrap_headers",
        ":bootstrap_pyconfig_contract",
        ":python_bootstrap_ceval",
    ],
    alwayslink = True,
)

cc_test(
    name = "libffi_complex_test",
    srcs = ["@cpython//python/private/libffi:complex_test.c"],
    deps = ["@cpython_libffi//:libffi"],
    tags = [] if PYTHON_VERSION == "3.14" else ["manual"],
    target_compatible_with = select({
        ":windows_arm64": ["@platforms//:incompatible"],
        ":windows_x86_64": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
)

cc_test(
    name = "libffi_closure_test",
    srcs = ["@cpython//python/private/libffi:closure_test.c"],
    deps = ["@cpython_libffi//:libffi"],
    tags = [] if PYTHON_VERSION == "3.14" else ["manual"],
)

cc_binary(
    name = "_freeze_module",
    srcs = [
        "Modules/getpath_noop.c",
        "Programs/_freeze_module.c",
    ],
    copts = CORE_COPTS,
    deps = select({
        ":windows_arm64": [
            STATIC_BOOTSTRAP_MODULES.library,
            ":bootstrap_headers",
            ":python_bootstrap_core_no_frozen",
        ],
        ":windows_x86_64": [
            STATIC_BOOTSTRAP_MODULES.library,
            ":bootstrap_headers",
            ":python_bootstrap_core_no_frozen",
        ],
        "//conditions:default": [
            BOOTSTRAP_MODULES.library,
            ":headers",
            ":python_core_no_frozen",
        ],
    }),
    linkopts = PLATFORM_LINKOPTS,
)

FROZEN_MODULES = {
    "Python/frozen_modules/__hello__.h": ("__hello__", "Lib/__hello__.py"),
    "Python/frozen_modules/__phello__.h": ("__phello__", "Lib/__phello__/__init__.py"),
    "Python/frozen_modules/__phello__.ham.eggs.h": ("__phello__.ham.eggs", "Lib/__phello__/ham/eggs.py"),
    "Python/frozen_modules/__phello__.ham.h": ("__phello__.ham", "Lib/__phello__/ham/__init__.py"),
    "Python/frozen_modules/__phello__.spam.h": ("__phello__.spam", "Lib/__phello__/spam.py"),
    "Python/frozen_modules/_collections_abc.h": ("_collections_abc", "Lib/_collections_abc.py"),
    "Python/frozen_modules/_sitebuiltins.h": ("_sitebuiltins", "Lib/_sitebuiltins.py"),
    "Python/frozen_modules/abc.h": ("abc", "Lib/abc.py"),
    "Python/frozen_modules/codecs.h": ("codecs", "Lib/codecs.py"),
    "Python/frozen_modules/frozen_only.h": ("frozen_only", "Tools/freeze/flag.py"),
    "Python/frozen_modules/genericpath.h": ("genericpath", "Lib/genericpath.py"),
    "Python/frozen_modules/getpath.h": ("getpath", "Modules/getpath.py"),
    "Python/frozen_modules/importlib._bootstrap.h": ("importlib._bootstrap", "Lib/importlib/_bootstrap.py"),
    "Python/frozen_modules/importlib._bootstrap_external.h": ("importlib._bootstrap_external", "Lib/importlib/_bootstrap_external.py"),
    "Python/frozen_modules/importlib.machinery.h": ("importlib.machinery", "Lib/importlib/machinery.py"),
    "Python/frozen_modules/importlib.util.h": ("importlib.util", "Lib/importlib/util.py"),
    "Python/frozen_modules/io.h": ("io", "Lib/io.py"),
    "Python/frozen_modules/ntpath.h": ("ntpath", "Lib/ntpath.py"),
    "Python/frozen_modules/os.h": ("os", "Lib/os.py"),
    "Python/frozen_modules/posixpath.h": ("posixpath", "Lib/posixpath.py"),
    "Python/frozen_modules/runpy.h": ("runpy", "Lib/runpy.py"),
    "Python/frozen_modules/site.h": ("site", "Lib/site.py"),
    "Python/frozen_modules/stat.h": ("stat", "Lib/stat.py"),
    "Python/frozen_modules/zipimport.h": ("zipimport", "Lib/zipimport.py"),
}

[
    run_binary(
        name = "freeze_%s" % output[len("Python/frozen_modules/"):-len(".h")].replace(".", "_"),
        args = [
            module_name,
            "$(execpath %s)" % source,
            "$(execpath %s)" % output,
        ],
        srcs = [source],
        outs = [output],
        tool = ":_freeze_module",
    )
    for output, (module_name, source) in FROZEN_MODULES.items()
]

GETPATH_COPTS = select({
    ":windows_arm64": [
        "-DEXEC_PREFIX=NULL",
        "-DPLATLIBDIR=\\\"DLLs\\\"",
        "-DPREFIX=NULL",
        "-DPYDEBUGEXT=\\\"\\\"",
        "-DVERSION=NULL",
        "-DVPATH=\\\".\\\"",
    ],
    ":windows_x86_64": [
        "-DEXEC_PREFIX=NULL",
        "-DPLATLIBDIR=\\\"DLLs\\\"",
        "-DPREFIX=NULL",
        "-DPYDEBUGEXT=\\\"\\\"",
        "-DVERSION=NULL",
        "-DVPATH=\\\".\\\"",
    ],
    "//conditions:default": [
        "-DEXEC_PREFIX=\\\"/python\\\"",
        "-DPLATLIBDIR=\\\"lib\\\"",
        "-DPREFIX=\\\"/python\\\"",
        "-DPYTHONPATH=\\\"\\\"",
        "-DVERSION=\\\"%s\\\"" % PYTHON_VERSION,
        "-DVPATH=\\\".\\\"",
    ],
})

DEEPFREEZE_SRCS = deepfreeze_sources(
    bootstrap_deps = select({
        ":windows_arm64": [
            STATIC_BOOTSTRAP_MODULES.library,
            ":bootstrap_headers",
            ":python_bootstrap_core_no_frozen",
        ],
        ":windows_x86_64": [
            STATIC_BOOTSTRAP_MODULES.library,
            ":bootstrap_headers",
            ":python_bootstrap_core_no_frozen",
        ],
        "//conditions:default": [
            BOOTSTRAP_MODULES.library,
            ":headers",
            ":python_core_no_frozen",
        ],
    }),
    core_copts = CORE_COPTS,
    frozen_modules = FROZEN_MODULES,
    getpath_copts = GETPATH_COPTS,
    linkopts = PLATFORM_LINKOPTS,
    needs_deepfreeze = PYTHON_NEEDS_DEEPFREEZE,
    version = PYTHON_VERSION,
)

cc_library(
    name = "python_frozen",
    srcs = [
        "Modules/getpath.c",
        "Python/frozen.c",
    ] + FROZEN_MODULES.keys() + DEEPFREEZE_SRCS,
    copts = GETPATH_COPTS + CORE_COPTS,
    includes = ["Python"],
    deps = [":headers"],
)

cc_library(
    name = "python_runtime_core",
    deps = [
        ":python_core_no_frozen",
        STATIC_MODULES.library,
    ],
)

cc_shared_library(
    name = "python_dll",
    deps = [
        ":python_core_no_frozen",
        ":python_frozen",
        STATIC_MODULES.library,
    ],
    features = ["no_windows_export_all_symbols"],
    shared_lib_name = "runtime/" + PYTHON_DLL,
    target_compatible_with = select({
        ":windows_arm64": [],
        ":windows_x86_64": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    user_link_flags = WINDOWS_LINK_LIBRARIES + ["/OPT:REF,NOICF"],
)

filegroup(
    name = "python_dll_interface_library",
    srcs = [":python_dll"],
    output_group = "interface_library",
)

copy_file(
    name = "python_import_library",
    src = ":python_dll_interface_library",
    out = "runtime/libs/" + PYTHON_IMPORT_LIBRARY,
)

cc_import(
    name = "python_dll_import",
    interface_library = ":python_import_library",
    shared_library = ":python_dll",
    target_compatible_with = select({
        ":windows_arm64": [],
        ":windows_x86_64": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

cc_library(
    name = "python3_forwarder",
    srcs = ["PC/python3dll.c"],
    alwayslink = True,
    copts = C_STANDARD_COPTS + [
        "-DPYTHON_DLL_NAME=\\\"{}\\\"".format(PYTHON_DLL_BASENAME),
    ],
    target_compatible_with = select({
        ":windows_arm64": [],
        ":windows_x86_64": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

cc_shared_library(
    name = "python3_dll",
    deps = [":python3_forwarder"],
    features = ["no_windows_export_all_symbols"],
    shared_lib_name = "runtime/python3.dll",
    target_compatible_with = select({
        ":windows_arm64": [],
        ":windows_x86_64": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    user_link_flags = ["/NOENTRY"],
)

filegroup(
    name = "python3_dll_interface_library",
    srcs = [":python3_dll"],
    output_group = "interface_library",
)

copy_file(
    name = "python3_import_library",
    src = ":python3_dll_interface_library",
    out = "runtime/libs/python3.lib",
)

cc_import(
    name = "python3_dll_import",
    interface_library = ":python3_import_library",
    shared_library = ":python3_dll",
    target_compatible_with = select({
        ":windows_arm64": [],
        ":windows_x86_64": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

SHARED_EXTENSIONS = shared_extensions(
    PYTHON_VERSION,
    PYTHON_SOABI,
    python_import = ":python_dll_import",
    python_import_library = PYTHON_IMPORT_LIBRARY,
    stable_import = ":python3_dll_import",
)

NATIVE_TEST_PROGRAMS = native_test_programs(
    version = PYTHON_VERSION,
    deps = select({
        ":windows_arm64": [
            ":headers",
            ":python_dll_import",
        ],
        ":windows_x86_64": [
            ":headers",
            ":python_dll_import",
        ],
        "//conditions:default": [
            ":headers",
            ":python_frozen",
            ":python_runtime_core",
        ],
    }),
    linkopts = PLATFORM_LINKOPTS + select({
        ":windows_arm64": ["/NODEFAULTLIB:" + PYTHON_IMPORT_LIBRARY],
        ":windows_x86_64": ["/NODEFAULTLIB:" + PYTHON_IMPORT_LIBRARY],
        "//conditions:default": [],
    }),
    local_defines = select({
        ":windows_arm64": [],
        ":windows_x86_64": [],
        "//conditions:default": [
            "Py_BUILD_CORE=1",
            "Py_BUILD_CORE_MODULE=1",
        ],
    }),
)

copy_to_directory(
    name = "runtime_stdlib",
    srcs = glob(["Lib/**"]) + [":sysconfig_data"] + select({
        ":darwin_arm64": SHARED_EXTENSIONS.darwin_arm64,
        ":darwin_x86_64": SHARED_EXTENSIONS.darwin_x86_64,
        ":linux_arm64": SHARED_EXTENSIONS.linux_arm64,
        ":linux_x86_64": SHARED_EXTENSIONS.linux_x86_64,
        ":windows_arm64": SHARED_EXTENSIONS.windows,
        ":windows_x86_64": SHARED_EXTENSIONS.windows,
    }),
    out = "runtime/Lib",
    root_paths = [
        "Lib",
        ".",
    ],
)

copy_to_directory(
    name = "runtime_include",
    srcs = glob(["Include/**"]),
    out = "runtime/Include",
    root_paths = ["Include"],
)

copy_file(
    name = "runtime_makefile",
    src = ":sysconfig_makefile",
    out = "runtime/Makefile",
)

copy_file(
    name = "runtime_pyconfig",
    src = ":pyconfig_h",
    out = "runtime/pyconfig.h",
)

copy_file(
    name = "runtime_setup_local",
    src = "Modules/Setup.local",
    out = "runtime/Modules/Setup.local",
)

copy_file(
    name = "runtime_pybuilddir",
    src = "pybuilddir.txt",
    out = "runtime/pybuilddir.txt",
)

PYTHON_RUNTIME_DATA = [
    ":runtime_include",
    ":runtime_pyconfig",
    ":runtime_stdlib",
] + NATIVE_TEST_PROGRAMS + select({
    ":windows_arm64": [
        ":python3_dll",
        ":python3_import_library",
        ":python_dll",
        ":python_import_library",
    ],
    ":windows_x86_64": [
        ":python3_dll",
        ":python3_import_library",
        ":python_dll",
        ":python_import_library",
    ],
    "//conditions:default": [
        ":runtime_makefile",
        ":runtime_pybuilddir",
        ":runtime_setup_local",
    ],
})

PYTHON_RUNTIME_DEPS = select({
    ":windows_arm64": [
        ":headers",
        ":python_dll_import",
    ],
    ":windows_x86_64": [
        ":headers",
        ":python_dll_import",
    ],
    "//conditions:default": [
        ":headers",
        ":python_frozen",
        ":python_runtime_core",
    ],
})

BUILD_METADATA = cpython_build_metadata(
    version = PYTHON_VERSION,
    core_copts = CORE_COPTS,
    linkopts = PYTHON_LINKOPTS,
    runtime_data = PYTHON_RUNTIME_DATA,
    runtime_deps = PYTHON_RUNTIME_DEPS,
)

cc_binary(
    name = "runtime/python",
    srcs = ["Programs/python.c"],
    copts = CORE_COPTS,
    data = PYTHON_RUNTIME_DATA + BUILD_METADATA.runtime_data,
    deps = PYTHON_RUNTIME_DEPS,
    linkopts = PYTHON_LINKOPTS + select({
        ":windows_arm64": ["/NODEFAULTLIB:" + PYTHON_IMPORT_LIBRARY],
        ":windows_x86_64": ["/NODEFAULTLIB:" + PYTHON_IMPORT_LIBRARY],
        "//conditions:default": [],
    }),
)

alias(
    name = "python",
    actual = ":runtime/python",
)

copy_to_directory(
    name = "runtime_test_doc",
    srcs = ["Doc/README.rst"],
    out = "runtime/Doc",
    root_paths = ["Doc"],
)

copy_to_directory(
    name = "runtime_test_objects",
    srcs = ["Objects/object.c"],
    out = "runtime/Objects",
    root_paths = ["Objects"],
)

copy_to_directory(
    name = "runtime_test_parser",
    srcs = [
        "Parser/Python.asdl",
        "Parser/asdl.py",
    ],
    out = "runtime/Parser",
    root_paths = ["Parser"],
)

copy_to_directory(
    name = "runtime_test_pc",
    srcs = glob([
        "PC/pyconfig.h",
        "PC/pyconfig.h.in",
    ], allow_empty = True),
    out = "runtime/PC",
    root_paths = ["PC"],
)

[
    copy_file(
        name = "runtime_test_" + source.lower().replace(".", "_").replace("/", "_"),
        src = source,
        out = "runtime/" + source,
    )
    for source in [
        "Makefile.pre.in",
        "README.rst",
        "configure",
        "configure.ac",
        "pyconfig.h.in",
    ]
]

filegroup(
    name = "source_build_test_data",
    srcs = BUILD_METADATA.test_data + [
        ":runtime_test_doc",
        ":runtime_test_makefile_pre_in",
        ":runtime_test_objects",
        ":runtime_test_parser",
        ":runtime_test_pc",
        ":runtime_test_readme_rst",
        ":runtime_test_configure",
        ":runtime_test_configure_ac",
        ":runtime_test_pyconfig_h_in",
    ],
)

upstream_regrtests(
    name = "upstream_tests",
    python = ":python",
    test_data = [":source_build_test_data"],
    version = PYTHON_VERSION,
)
