load("@bazel_lib//lib:expand_template.bzl", "expand_template")
load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

config_setting(
    name = "arm64",
    constraint_values = ["@platforms//cpu:aarch64"],
)

config_setting(
    name = "x86_64",
    constraint_values = ["@platforms//cpu:x86_64"],
)

config_setting(
    name = "linux_arm64",
    constraint_values = [
        "@platforms//cpu:aarch64",
        "@platforms//os:linux",
    ],
)

config_setting(
    name = "darwin_arm64",
    constraint_values = [
        "@platforms//cpu:aarch64",
        "@platforms//os:macos",
    ],
)

config_setting(
    name = "darwin_x86_64",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:macos",
    ],
)

config_setting(
    name = "linux_x86_64",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
)

config_setting(
    name = "windows_arm64",
    constraint_values = [
        "@platforms//cpu:aarch64",
        "@platforms//os:windows",
    ],
)

config_setting(
    name = "windows_x86_64",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:windows",
    ],
)

expand_template(
    name = "ffi_h",
    out = "ffi.h",
    substitutions = select({
        ":darwin_arm64": {
            "@FFI_EXEC_TRAMPOLINE_TABLE@": "1",
            "@HAVE_LONG_DOUBLE@": "1",
            "@TARGET@": "AARCH64",
            "@VERSION@": "3.4.7",
        },
        ":darwin_x86_64": {
            "@FFI_EXEC_TRAMPOLINE_TABLE@": "0",
            "@HAVE_LONG_DOUBLE@": "1",
            "@TARGET@": "X86_64",
            "@VERSION@": "3.4.7",
        },
        ":linux_arm64": {
            "@FFI_EXEC_TRAMPOLINE_TABLE@": "0",
            "@HAVE_LONG_DOUBLE@": "1",
            "@TARGET@": "AARCH64",
            "@VERSION@": "3.4.7",
        },
        ":linux_x86_64": {
            "@FFI_EXEC_TRAMPOLINE_TABLE@": "0",
            "@HAVE_LONG_DOUBLE@": "1",
            "@TARGET@": "X86_64",
            "@VERSION@": "3.4.7",
        },
        ":windows_arm64": {
            "@FFI_EXEC_TRAMPOLINE_TABLE@": "0",
            "@HAVE_LONG_DOUBLE@": "0",
            "@TARGET@": "ARM_WIN64",
            "@VERSION@": "3.4.7",
        },
        ":windows_x86_64": {
            "@FFI_EXEC_TRAMPOLINE_TABLE@": "0",
            "@HAVE_LONG_DOUBLE@": "0",
            "@TARGET@": "X86_WIN64",
            "@VERSION@": "3.4.7",
        },
    }),
    template = "include/ffi.h.in",
)

cc_library(
    name = "libffi",
    defines = select({
        ":darwin_arm64": ["FFI_EXEC_TRAMPOLINE_TABLE=1"],
        ":windows_arm64": [
            "FFI_EXEC_TRAMPOLINE_TABLE=0",
            "FFI_STATIC_BUILD=1",
        ],
        ":windows_x86_64": [
            "FFI_EXEC_TRAMPOLINE_TABLE=0",
            "FFI_STATIC_BUILD=1",
        ],
        "//conditions:default": ["FFI_EXEC_TRAMPOLINE_TABLE=0"],
    }),
    srcs = [
        "src/closures.c",
        "src/debug.c",
        "src/java_raw_api.c",
        "src/prep_cif.c",
        "src/raw_api.c",
        "src/tramp.c",
        "src/types.c",
    ] + select({
        ":darwin_arm64": [
            "src/aarch64/ffi.c",
            "src/aarch64/sysv.S",
        ],
        ":darwin_x86_64": [
            "src/x86/ffi64.c",
            "src/x86/ffiw64.c",
            "src/x86/unix64.S",
            "src/x86/win64.S",
        ],
        ":linux_arm64": [
            "src/aarch64/ffi.c",
            "src/aarch64/sysv.S",
        ],
        ":linux_x86_64": [
            "src/x86/ffi64.c",
            "src/x86/ffiw64.c",
            "src/x86/unix64.S",
            "src/x86/win64.S",
        ],
        ":windows_arm64": [
            "src/aarch64/ffi.c",
            "src/aarch64/sysv.S",
        ],
        ":windows_x86_64": [
            "src/x86/ffiw64.c",
            "src/x86/win64.S",
        ],
        "//conditions:default": [],
    }),
    hdrs = [
        ":ffi_h",
        "include/ffi_cfi.h",
        "include/ffi_common.h",
        "include/tramp.h",
    ] + select({
        ":arm64": [
            "src/aarch64/ffitarget.h",
            "src/aarch64/internal.h",
        ],
        ":x86_64": [
            "src/x86/asmnames.h",
            "src/x86/ffitarget.h",
            "src/x86/internal.h",
            "src/x86/internal64.h",
        ],
    }),
    includes = [
        ".",
        "include",
        "src",
    ] + select({
        ":arm64": ["src/aarch64"],
        ":x86_64": ["src/x86"],
    }),
    textual_hdrs = ["src/dlmalloc.c"],
    deps = ["@cpython//python/private/libffi:config"],
)
